# prompt2metaworld

./: README.md  pyproject.toml  requirements.txt
configs/: mpc.yaml  tasks.yaml
p2mw/: __init__.py
p2mw/baselines/: __init__.py  cot_agent.py
p2mw/baselines/prompts/: __init__.py  cot.py  meta.py
p2mw/env/: __init__.py  wrapper.py
p2mw/mpc/: __init__.py  controller.py  memory.py  prompts.py  semantic.py
p2mw/utils/: __init__.py  api.py
scripts/: run_baseline.py  run_mpc.py
tests/: test_memory.py  test_semantic.py
