[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "p2mw"
version = "0.1.0"
description = "LLM-based zero-shot robot control for MetaWorld (CoT + LLM-MPC)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "ibisbill" }]

keywords = ["robotics", "llm", "metaworld", "mpc", "reinforcement-learning"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "gym>=0.26.0",
    "dm_env",
    "dm_control",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
p2mw-mpc      = "scripts.run_mpc:main"
p2mw-baseline = "scripts.run_baseline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["p2mw*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
